@@ -2987,3 +2987,127 @@ class Percent(PyoObject):
     def percent(self): return self._percent
     @percent.setter
     def percent(self, x): self.setPercent(x)
+
+class Between(PyoObject):
+    """
+    Informs when an input signal is contained in a specified range.
+    
+    Outputs a value of 1.0 if the input signal is greater or egal
+    than `min` and less than `max`. Otherwise, outputs a value of 0.0.
+
+    Parent class : PyoObject
+
+    Parameters:
+
+    input : PyoObject
+        Input signal to process.
+    min : float or PyoObject, optional
+        Minimum range value. Defaults to 0.
+    max : float or PyoObject, optional
+        Maximum range value. Defaults to 1.
+
+    Methods:
+
+    setInput(x, fadetime) : Replace the `input` attribute.
+    setMin(x) : Replace the `min` attribute.
+    setMax(x) : Replace the `max` attribute.
+
+    Attributes:
+
+    input : PyoObject. Input signal to process.
+    min : float or PyoObject. Minimum range value.
+    max : float or PyoObject. Maximum range value.
+
+    Examples:
+
+    >>> s = Server().boot()
+    >>> s.start()
+    >>> ph = Phasor(freq=[7,8])
+    >>> tr = Between(ph, min=0, max=.25)
+    >>> amp = Port(tr, risetime=0.002, falltime=0.002, mul=.3)
+    >>> a = SineLoop(freq=[245,250], feedback=.1, mul=amp).out()
+
+    """
+    def __init__(self, input, min=-1.0, max=1.0, mul=1, add=0):
+        PyoObject.__init__(self)
+        self._input = input
+        self._min = min
+        self._max = max
+        self._mul = mul
+        self._add = add
+        self._in_fader = InputFader(input)
+        in_fader, min, max, mul, add, lmax = convertArgsToLists(self._in_fader, min, max, mul, add)
+        self._base_objs = [Between_base(wrap(in_fader,i), wrap(min,i), wrap(max,i), wrap(mul,i), wrap(add,i)) for i in range(lmax)]
+
+    def __dir__(self):
+        return ['input', 'min', 'max', 'mul', 'add']
+
+    def setInput(self, x, fadetime=0.05):
+        """
+        Replace the `input` attribute.
+
+        Parameters:
+
+        x : PyoObject
+            New signal to process.
+        fadetime : float, optional
+            Crossfade time between old and new input. Defaults to 0.05.
+
+        """
+        self._input = x
+        self._in_fader.setInput(x, fadetime)
+
+    def setMin(self, x):
+        """
+        Replace the `min` attribute.
+
+        Parameters:
+
+        x : float or PyoObject
+            New `min` attribute.
+
+        """
+        self._min = x
+        x, lmax = convertArgsToLists(x)
+        [obj.setMin(wrap(x,i)) for i, obj in enumerate(self._base_objs)]
+
+    def setMax(self, x):
+        """
+        Replace the `max` attribute.
+
+        Parameters:
+
+        x : float or PyoObject
+            New `max` attribute.
+
+        """
+        self._max = x
+        x, lmax = convertArgsToLists(x)
+        [obj.setMax(wrap(x,i)) for i, obj in enumerate(self._base_objs)]
+
+    def ctrl(self, map_list=None, title=None, wxnoserver=False):
+        self._map_list = [SLMap(0., 1., 'lin', 'min', self._min),
+                          SLMap(0., 1., 'lin', 'max', self._max),
+                          SLMapMul(self._mul)]
+        PyoObject.ctrl(self, map_list, title, wxnoserver)
+
+    @property
+    def input(self):
+        """PyoObject. Input signal to process.""" 
+        return self._input
+    @input.setter
+    def input(self, x): self.setInput(x)
+
+    @property
+    def min(self):
+        """float or PyoObject. Minimum range value.""" 
+        return self._min
+    @min.setter
+    def min(self, x): self.setMin(x)
+
+    @property
+    def max(self):
+        """float or PyoObject. Maximum range value.""" 
+        return self._max
+    @max.setter
+    def max(self, x): self.setMax(x)
